lash/tests/ui/root_tool_provider_is_not_public.stderr
error[E0405]: cannot find trait `ToolProvider` in crate `lash`
 --> tests/ui/root_tool_provider_is_not_public.rs:2:30
  |
2 |     let _: Option<&dyn lash::ToolProvider> = None;
  |                              ^^^^^^^^^^^^ not found in `lash`
